add assets add html layout and css

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,1 +1,8 @@
-<p>results works!</p>
+<div class="results">
+    <ul class="results__list">
+
+    </ul>
+    <div class="results__pages">
+        
+    </div>
+</div>
