--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="copyright">
+    Design © by
+    <a href="https://github.com/jonasschmedtmann" target="_blank" class="link">Jonas Schmedtmann</a>
+    <br> Powered by
+    <a href="https://forkify-api.herokuapp.com/" target="_blank" class="link">forkify-api.herokuapp.com</a>
+</div>
