--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<header class="header">
+    <img src="assets/logo.png" alt="Logo" class="header__logo">
+    <form class="search">
+        <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes...">
+        <button class="btn search__btn">
+            <svg class="search__icon">
+                <use href="assets/icons.svg#icon-magnifying-glass"></use>
+            </svg>
+            <span>Search</span>
+        </button>
+    </form>
+    <div class="likes">
+        <div class="likes__field">
+            <svg class="likes__icon">
+                <use href="assets/icons.svg#icon-heart"></use>
+            </svg>
+        </div>
+        <div class="likes__panel">
+            <ul class="likes__list">
+            </ul>
+        </div>
+    </div>
+</header>
