--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -1,1 +1,5 @@
-<p>shopping works!</p>
+<div class="shopping">
+    <h2 class="heading-2">My Shopping List</h2>
+    <ul class="shopping_list"> </ul>
+    <app-footer></app-footer>
+</div>
